# CalledIt

./: .dockerignore  .gitignore  Anchor.toml  CalledIt_TxLINE_CFE_SPEC.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  package.json  vitest.config.ts
backend/src/: beta-readiness.test.ts  config.ts  public-readiness.test.ts  server.ts
backend/src/db/: client.ts  migrate.ts  types.ts
backend/src/leaderboard/: algorithm.test.ts  algorithm.ts
backend/src/live/: service.ts
backend/src/market/: devnetSmoke.ts  initialize.ts  onchain.ts  repository.ts  routes.ts  service.ts  txlineCpiSmoke.ts  txlineProof.test.ts  txlineProof.ts
backend/src/pools/: repository.ts  routes.ts
backend/src/predictions/: service.ts
backend/src/receipts/: onchain.ts  service.ts
backend/src/replay/: service.ts
backend/src/scripts/: demo.ts
backend/src/telegram/: auth.ts  authRoutes.ts  client.ts  routes.ts  updateStore.ts
backend/src/txline/: client.ts  repository.ts  routes.ts
backend/src/utils/: admin.ts  crypto.ts  errors.ts  http.ts  invite.ts  rateLimit.ts
frontend/: index.html  package.json
frontend/src/: main.tsx  styles.css
programs/calledit_receipts/: Cargo.toml
programs/calledit_receipts/src/: lib.rs
scripts/: backup-sqlite.mjs  docker-entrypoint.sh  restore-sqlite.mjs  txline-activate-devnet.mjs  txline-devnet-guest.mjs
submission/: technical-documentation.md  txline-technical-documentation.md
