[package]
name = "calledit_receipts"
version = "0.1.0"
description = "CalledIt receipt hash program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "calledit_receipts"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.0"
